# resource-wise

./: .gitignore  README.md  package-lock.json  package.json  use-case.txt  what-to-build.txt
.husky/: pre-commit
backend/: .flake8  README.md  alembic.ini  env.template  main.py  pyproject.toml  test_comprehensive_query_agent.py  test_employee_projects_fix.py  test_query_agent.py  test_query_agent_standalone.py  test_real_queries_comprehensive.py  test_vector_fallback_scenarios.py
backend/alembic/: env.py
backend/alembic/versions/: 20250612_1751_27900207ff35_initial_setup.py  20250612_2038_afcad4ad30f9_initial_setup.py  20250612_2101_273d96725f55_initial_setup.py  20250612_2147_1fecf4fe661d_initial_setup.py  20250612_2149_dfd42fe4d81a_add_tsvector_triggers_and_functions.py  20250612_2301_b8a13321c65e_initial_setup_schema_and_tables.py  20250612_2302_4c3b1d2fdf93_add_tsvector_triggers_and_functions.py  20250612_2304_34a648ecedae_add_embedding_columns.py  20250612_2305_20250613_0001_seed_data_with_realistic_allocations.py  20250612_2305_34a648ecedae_seed_data_with_realistic_allocations.py  20250612_2306_a1b2c3d4e5f6_populate_employee_skills.py  20250613_0001_seed_data_with_business_fields.py
backend/app/: __init__.py  main.py
backend/app/ai/: orchestrator.py
backend/app/ai/agents/: base.py
backend/app/ai/agents/fuzzy/: classifier.py  resolver.py
backend/app/ai/agents/fuzzy/config/: __init__.py  categories.py  designations.py
backend/app/ai/agents/fuzzy/resolvers/: __init__.py  base.py  category.py  designation.py  hybrid.py  skill.py
backend/app/ai/agents/intent/: agent.py
backend/app/ai/agents/matching/: agent.py
backend/app/ai/agents/query/: agent.py
backend/app/ai/agents/response/: agent.py
backend/app/ai/core/: agent.py  config.py  exceptions.py  llm.py
backend/app/ai/prompts/: __init__.py  fuzzy_classifier_prompts.py  query_prompts.py  response_prompts.py
backend/app/ai/services/: context.py  schema.py  stream.py
backend/app/ai/workflow/: graph.py  state.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  allocation.py  base.py  designation.py  employee.py  enums.py  project.py  skill.py  user.py
backend/app/routers/: ai.py  allocations.py  chat.py  employees.py  health.py  projects.py
backend/app/schemas/: __init__.py  ai.py
backend/app/services/: __init__.py  chat_orchestrator.py  context_manager.py  database.py  database_service.py  intent_classifier.py  query_generator.py  response_formatter.py  semantic_search.py
backend/docs/: sql_optimization_guide.md
backend/routers/: .keep
backend/schemas/scripts/: 1_add_resourcewise_schema.sql  2_add_resourcewise_seed_data.sql
backend/scripts/: backfill_embeddings.py  demo_intent_agent.py  run_realistic_tests.py  seed_data.py  setup_env.sh  test_critical_fix.py  test_enhanced_workflow.py  test_framework_priority.py  test_full_workflow.py  test_intent_agent.py  test_matching_agent.py  test_realistic_queries.py  test_reallife_scenarios.py  test_semantic_cases.py  test_skill_prioritization.py
docker/: docker-compose.yml  init-db.sql
docs/: ARCHITECTURE.md  CHAT_ARCHITECTURE.md  COMPLETE_WORKFLOW.md  SCOPE_DESIGN.txt
frontend/: .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/pages/: .keep  dummy.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  Landing.tsx
frontend/src/components/chat/: ChatInterface.tsx  HelperChips.tsx  ScrollableTable.tsx  ThinkingIndicator.tsx
frontend/src/components/common/: CustomButton.tsx  CustomCard.tsx  index.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useChatPersistence.ts  useStreamingChat.ts
frontend/src/pages/: AllocationsPage.tsx  ChatPage.tsx  EmployeesPage.tsx  ProjectsPage.tsx
frontend/src/store/: api.ts  index.ts
frontend/src/store/slices/: chatSlice.ts
frontend/src/theme/: index.ts
shared-config/: designations.json  openapi.json  skill_categories.json
