[project]
name = "resource-wise-backend"
description = "FastAPI backend for Resource Wise"
authors = [
    { name = "Jatin Gandhi" }
]
version = "0.1.0"
requires-python = "==3.13.*"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".venv",
    "venv", 
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true
